...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ListView
            android:id="@+id/moodList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="12dp"
            android:clipToPadding="false"
            android:paddingBottom="100dp"
...
                android:textColor="@color/white"
                app:icon="@drawable/ic_map"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/addMoodButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="Add"
                android:textColor="@color/white"
                app:icon="@drawable/ic_add"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />
        </LinearLayout>

...
