...
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="Search" />

    <item
        android:id="@+id/nav_moods"
        android:icon="@drawable/ic_mood_history"
        android:title="My Moods" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
...
